# backend/model/http/requests/categoryRequests.ts
@@ -1,3 +1,9 @@
 export interface ICreateCategoryRequest {
     name: string;
 }
+
+export interface ICategoryListRequest {
+    parentIds: string[];
+    name: string;
+    ids: string[];
+}
