# backend/model/http/responses/categoryResponses.ts
@@ -1,7 +1,8 @@
 export interface CategoryItem {
-    id: number
+    id: string
     name: string
+    image: string
 }
 export interface CategoryItems {
-    items: CategoryItem
+    items: CategoryItem[]
 }
