# backend/public/swagger.json
@@ -163,10 +163,10 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"BaseResponse_null_": {
+			"BaseResponse_string_": {
 				"properties": {
 					"data": {
-						"anyOf": [],
+						"type": "string",
 						"nullable": true
 					},
 					"error": {
@@ -193,6 +193,93 @@
 				},
 				"required": [
 					"name"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"CategoryItem": {
+				"properties": {
+					"id": {
+						"type": "string"
+					},
+					"name": {
+						"type": "string"
+					},
+					"image": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"id",
+					"name",
+					"image"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"CategoryItems": {
+				"properties": {
+					"items": {
+						"items": {
+							"$ref": "#/components/schemas/CategoryItem"
+						},
+						"type": "array"
+					}
+				},
+				"required": [
+					"items"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"BaseResponse_CategoryItems_": {
+				"properties": {
+					"data": {
+						"allOf": [
+							{
+								"$ref": "#/components/schemas/CategoryItems"
+							}
+						],
+						"nullable": true
+					},
+					"error": {
+						"allOf": [
+							{
+								"$ref": "#/components/schemas/Error"
+							}
+						],
+						"nullable": true
+					}
+				},
+				"required": [
+					"data",
+					"error"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"ICategoryListRequest": {
+				"properties": {
+					"parentIds": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
+					},
+					"name": {
+						"type": "string"
+					},
+					"ids": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
+					}
+				},
+				"required": [
+					"parentIds",
+					"name",
+					"ids"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -268,7 +355,7 @@
 				}
 			}
 		},
-		"/api/v1/category/create": {
+		"/v1/category/create": {
 			"post": {
 				"operationId": "Create",
 				"responses": {
@@ -277,7 +364,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/BaseResponse_null_"
+									"$ref": "#/components/schemas/BaseResponse_string_"
 								}
 							}
 						}
@@ -291,6 +378,35 @@
 						"application/json": {
 							"schema": {
 								"$ref": "#/components/schemas/ICreateCategoryRequest"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/v1/category/list": {
+			"post": {
+				"operationId": "List",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/BaseResponse_CategoryItems_"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/ICategoryListRequest"
 							}
 						}
 					}
